...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Authentication.StartUpActivity"
    android:background="@color/bg_white">

    <ImageView
        android:id="@+id/profileMain"
        android:layout_width="73dp"
        android:layout_height="37dp"
        android:clickable="true"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintBottom_toTopOf="@+id/totalCostView"
        app:layout_constraintTop_toBottomOf="@id/tag_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ListView
            android:id="@+id/item_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="10.0sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalCostView" />

    <ImageView
        android:id="@+id/add_button"
        android:layout_width="85dp"
        android:layout_height="72dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="Click to add item"
        android:focusable="true"
...
