...
        app:layout_constraintBottom_toBottomOf="@+id/space4"
        app:layout_constraintEnd_toEndOf="@+id/space4"
        app:layout_constraintStart_toStartOf="@+id/space4"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/usernameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="Email"
            android:textColor="@color/white"
...
        app:layout_constraintBottom_toTopOf="@+id/space4"
        app:layout_constraintEnd_toEndOf="@+id/space4"
        app:layout_constraintStart_toStartOf="@+id/space4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <EditText
            android:id="@+id/PasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="Password"
            android:inputType="textPassword"
...
